--- a/101435481-lab-test2-comp3133/src/app/missionlist/missionlist.component.html
+++ b/101435481-lab-test2-comp3133/src/app/missionlist/missionlist.component.html
@@ -1,1 +1,18 @@
-<p>missionlist works!</p>
+<div class="missions">
+    <mat-card *ngFor="let mission of missions" class="mission-card">
+      <mat-card-header>
+        <mat-card-title>{{ mission.mission_name }}</mat-card-title>
+        <mat-card-subtitle>Launch Year: {{ mission.launch_year }}</mat-card-subtitle>
+      </mat-card-header>
+      <img mat-card-image [src]="mission.links.mission_patch_small" alt="Mission Patch">
+      <mat-card-content>
+        <p>{{ mission.details }}</p>
+        <p>Rocket: {{ mission.rocket.rocket_name }} ({{ mission.rocket.rocket_type }})</p>
+      </mat-card-content>
+      <mat-card-actions>
+        <a mat-button [href]="mission.links.article_link" target="_blank">Article</a>
+        <a mat-button [href]="mission.links.wikipedia" target="_blank">Wikipedia</a>
+        <a mat-button [href]="mission.links.video_link" target="_blank">Video</a>
+      </mat-card-actions>
+    </mat-card>
+  </div>
