--- a/101435481-lab-test2-comp3133/src/app/missiondetails/missiondetails.component.html
+++ b/101435481-lab-test2-comp3133/src/app/missiondetails/missiondetails.component.html
@@ -1,1 +1,10 @@
-<p>missiondetails works!</p>
+<div *ngIf="mission">
+    <h2>{{ mission.mission_name }}</h2>
+    <p>{{ mission.details }}</p>
+    <img [src]="mission.links.mission_patch_small" alt="Mission Patch">
+    <p>Rocket: {{ mission.rocket.rocket_name }} ({{ mission.rocket.rocket_type }})</p>
+    <a [href]="mission.links.article_link" target="_blank">Article</a>
+    <a [href]="mission.links.wikipedia" target="_blank">Wikipedia</a>
+    <a [href]="mission.links.video_link" target="_blank">Video</a>
+  </div>
+  
